fix subnav spacing; multiple layer toggle

--- a/site.css
+++ b/site.css
@@ -998,7 +998,7 @@ box-shadow: 0 -2px 4px rgba(0,0,0,0.25); */
 background: #000;
 height: 600px;
 position: relative;
-margin-top: 20px;
+top: -25px;
 margin-bottom: 20px;
 -webkit-box-shadow: 0 -2px 4px rgba(0,0,0,0.25);
 box-shadow: 0 -2px 4px rgba(0,0,0,0.25);
@@ -1179,7 +1179,7 @@ box-shadow: 0 -2px 4px rgba(0,0,0,0.25);
   position: absolute;
   z-index: 1;
   top: 10px;
-  right: 10px;
+  left: 10px;
   border-radius: 3px;
   width: 120px;
   border: 1px solid rgba(0,0,0,0.4);
